--- a/test-1.html
+++ b/test-1.html
@@ -22,6 +22,16 @@
   </script>
 
   <link rel="stylesheet" href="myCss.css">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTEE1R1HDK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VTEE1R1HDK');
+  </script>
 </head>
 <body>
 
